--- a/config.toml
+++ b/config.toml
@@ -7,27 +7,13 @@ max_segment_count = 10
 max_connections = 10000
 max_outgoing_packet_count = 200
 
-# TCP 监听器 - MQTT 3.1.1
+# TCP 监听器 - MQTT 3.1.1 和 5.0 (rumqttd 自动识别)
 [v4.1]
-name = "tcp-v4"
+name = "tcp-mqtt"
 listen = "0.0.0.0:1883"
 next_connection_delay_ms = 1
     
 [v4.1.connections]
-connection_timeout_ms = 60000
-max_client_id_len = 256
-max_connections = 10000
-max_payload_size = 268435455
-max_inflight_count = 100
-throttle_delay_ms = 0
-
-# TCP 监听器 - MQTT 5.0
-[v5.1]
-name = "tcp-v5"
-listen = "0.0.0.0:1884"
-next_connection_delay_ms = 1
-
-[v5.1.connections]
 connection_timeout_ms = 60000
 max_client_id_len = 256
 max_connections = 10000
